CreatedAfter field was added to the GetNews endpoint to filter news that was created before that time.
