# cmd/husky/api/swagger.yaml
@@ -152,6 +152,11 @@ paths:
         in: query
         name: offset
         type: integer
+      - description: Example `2022-01-03T16:20:52.156534Z`. If unspecified, the creation
+          date of the news articles will be ignored.
+        in: query
+        name: createdAfter
+        type: string
       produces:
       - application/json
       responses:
